docs: drop in-the-weeds ioctl/native-access paragraph